GNOME Bugzilla – Bug 80302
shift-(backspace|delete) behaves unexpectedly in text widgets
Last modified: 2011-02-04 16:09:59 UTC
In the following scenario, shift-(backspace|delete) behaves unexpectedly (they do not delete the selected text): - type into text/entry widget - shift-home or shift-left to select some text - press delete or backspace whilst still holding down shift The text is not cleared. This is a strange and unexpected interruption/behaviour when your typing is more like crawling across the keyboard than rapid-fire accurate. :-)
*** Bug 81886 has been marked as a duplicate of this bug. ***
Shift-Delete is an obsolete keybinding for cut, that I'm adding back to keep some people happy. (#79079) hu Jun 13 17:50:36 2002 Owen Taylor <otaylor@redhat.com> * gtk/gtktextview.c gtk/gtkentry.c: Make <Shift>BackSpace a synonym for for Backspace. (#80302, Jeff Waugh)